@@ -32,6 +32,7 @@
 - fixed [ oval-Bugs-2973328 ] XMLConfigurer doesn't parse appliesTo for constraints
 - fixed [ oval-Bugs-2973339 ] Defaults are not applied to checks
 - fixed [ oval-Bugs-2973334 ] XMLConfigurer doesn't allow to parse when expressions
+- fixed [ oval-Bugs-2973344 ] NotNull checks for container values
 
 2009-09-27 v1.40
 ================
